feat: add CRUD parent and adjusment schema
